--- a/landing.html
+++ b/landing.html
@@ -22,7 +22,11 @@
 		</script>
 	</head>
 	<body>
-		<div class="email"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
+		<header id="imageview">
+			<h1>The Ultimate Travel Blog</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt.</p>
+		<div class="email">Subscribe <i class="fa fa-envelope-o" aria-hidden="true"></i></div>
 		<div class="overlap">
 			<div class="newsletter">
 				<div class="times">
@@ -37,5 +41,12 @@
 				</div>
 			</div>
 		</div>
+		</header>
+		<section id="text-section-a">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</section>
+		<section id="text-section-b">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</section>
 	</body>
 </html>
